--- a/css/tooltip.css
+++ b/css/tooltip.css
@@ -1,4 +1,4 @@
-#uespDestiny2Tooltip {
+.uespDestiny2Tooltip {
 	position: absolute;
 	z-index: 100;
 	width: 400px;
@@ -6,23 +6,36 @@
 
 #uespDestiny2TooltipRoot {
 	width: 400px;
+	max-height: 800px;
+	overflow: hidden;
 	font-family: "roboto condensed", Helvetica, Arial, sans-serif;
 	line-height: 1.1;
 	color: white;
 }
 
 #uespD2TooltipImage {
-	float: right;
+	float: left;
 	width: 64px;
 	height: 64px;
+	position: relative;
+	left: 0px;
+	top: 0px;
 }
 
-#uespD2TooltipImage img {
+#uespD2TooltipImage img:first-child {
 	width: 64px;
 	height: 64px;
 	position: relative;
 	top: -5px;
-	right: -5px;
+	left: -5px;
+}
+
+#uespD2TooltipImage img:nth-child(2) {
+	width: 64px;
+	height: 64px;
+	position: absolute;
+	top: -5px;
+	left: -5px;
 }
 
 #uespD2TooltipBody {
@@ -45,14 +58,18 @@
 }
 
 #uespD2TooltipTitle {
-	font-size: 20px;
+	font-size: 24px;
 	font-weight: bold;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 #uespD2TooltipSubTitle {
 	font-size: 16px;
 	font-weight: normal;
 	padding-top: 5px;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 #uespD2TooltipRequires {
@@ -67,7 +84,7 @@
 	
 }
 
-#uespD2TooltipPerks {
+#uespD2TooltipSockets {
 	
 }
 
@@ -77,6 +94,11 @@
 
 .uespDestiny2Toolip {
 	display: inline-block;
+}
+
+.uespD2ItemTypeError {
+	background-color: #aa3333;
+	color: #eee;
 }
 
 .uespD2ItemTypeCommon {
@@ -104,6 +126,30 @@
 	color: #fff;
 }
 
+.uespD2ItemTypeTextError {
+	color: #aa3333;
+}
+
+.uespD2ItemTypeTextCommon {
+	color: #c3bcb4;
+}
+
+.uespD2ItemTypeTextUncommon {
+	color: #366f42;
+}
+
+.uespD2ItemTypeTextRare {
+	color: #5076a3;
+}
+
+.uespD2ItemTypeTextLegendary {
+	color: #824f95;
+}
+
+.uespD2ItemTypeTextExotic {
+	color: #ceaf33;
+}
+
 .uespD2StatRow {
 	width: 100%;
 	padding: 2px;
@@ -116,18 +162,20 @@
 	margin-right: 5px;
 	overflow: hidden;
 	white-space: nowrap;
+	vertical-align: middle;
 }
 
 .uespD2StatValueRoot {
 	display: inline-block;
 	border: 2px solid #eee;
 	height: 10px;
+	vertical-align: middle;
 }
 
 .uespD2StatValue {
 	display: inline-block;
 	background-color: #eee;
-	height: 100%;
+	height: 12px;
 }
 
 .uespD2StatValueText {
@@ -141,15 +189,30 @@
 
 .uespD2SocketRow {
 	width: 100%;
+	clear: both;
+	margin-bottom: 5px;
 }
 
 .uespD2SocketName {
 	font-weight: bold;
+	white-space: nowrap;
+	overflow: hidden;
+	display: inline;
 }
 
 .uespD2SocketDesc {
-	font-size: 11px;
-	margin-bottom: 5px;
-	margin-left: 25px;
+	font-size: 12px;
+	margin-left: 5px;
 	color: #ddd;
+	display: inline;
+}
+
+.uespD2SocketIcon {
+	float: left;
+	margin-right: 5px;
+}
+
+.uespD2SocketIcon img {
+	width: 24px;
+	height: 24px;
 }
