--- a/css/tooltip.css
+++ b/css/tooltip.css
@@ -11,6 +11,7 @@
 	font-family: "roboto condensed", Helvetica, Arial, sans-serif;
 	line-height: 1.1;
 	color: white;
+	border: ridge 2px #553;
 }
 
 #uespD2TooltipImage {
@@ -44,7 +45,7 @@
 	color: white;
 	font-size: 12px;
 	min-height: 100px;
-	padding: 5px;
+	padding: 10px;
 	color: white;
 }
 
@@ -215,4 +216,8 @@
 .uespD2SocketIcon img {
 	width: 24px;
 	height: 24px;
+}
+
+.uespD2TooltipStatsDesc {
+	font-size: 12px;
 }
